# website

./: Cargo.toml  README.md  Trunk.toml  default.nix  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
pages/: index.html  index.js
public/: style.css
src/: lib.rs  main.rs
src/components/: Card.astro  card.rs  mod.rs
src/components/home/: About.astro  Buttons.astro  CodeTime.astro  DONOTPRESS.astro  Groups.astro  HotlineWebring.astro  JohnAd.astro  Links.astro  Music.astro  NavLink.astro  Projects.astro  Rise.astro  SiteButton.astro  Sponsor.astro  Title.astro  ViewCount.astro
src/components/home/Buttons/: Buttons.astro
src/components/home/Rise/: Rise.astro
src/layouts/: Layout.astro
src/pages/: index.astro
style/: output.css
